# job-search-project

./: README.md  pyproject.toml
src/: job_search.py  main.py  utils.py  vacancy.json
