[tool.poetry]
name = "job vacancies"
version = "0.1.0"
description = "job search"
authors = ["burnaschev <informal201144@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "pytest-cov"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
